--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -175,9 +175,7 @@
 						</ejbModule>
 						<ejbModule>
 							<groupId>de.mpg.escidoc.services</groupId>
-							<artifactId>
-                                structuredexportmanager
-                            </artifactId>
+							<artifactId>structuredexportmanager</artifactId>                          
 						</ejbModule>
 						<ejbModule>
 							<groupId>de.mpg.escidoc.services</groupId>
@@ -231,19 +229,7 @@
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon-dom</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<!-- 
-						<jarModule>
-							<groupId>trinidad</groupId>
-							<artifactId>trinidad-api</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>trinidad</groupId>
-							<artifactId>trinidad-impl</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						-->
+						</jarModule>						
 						<jarModule>
 							<groupId>org.richfaces.ui</groupId>
 							<artifactId>richfaces-ui</artifactId>
@@ -635,20 +621,6 @@
 			<version>8.7</version>
 			<scope>compile</scope>
 		</dependency>
-		<!--  
-		<dependency>
-			<groupId>trinidad</groupId>
-			<artifactId>trinidad-api</artifactId>
-			<version>1.2.6</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>trinidad</groupId>
-			<artifactId>trinidad-impl</artifactId>
-			<version>1.2.6</version>
-			<scope>provided</scope>
-		</dependency>
-		-->
 		<dependency>
 			<groupId>org.richfaces.ui</groupId>
 			<artifactId>richfaces-ui</artifactId>
