--- a/pubman/pubman_logic_ear/pom.xml
+++ b/pubman/pubman_logic_ear/pom.xml
@@ -114,9 +114,7 @@
 						</ejbModule>
 						<ejbModule>
 							<groupId>de.mpg.escidoc.services</groupId>
-							<artifactId>
-                                structuredexportmanager
-                            </artifactId>
+							<artifactId>structuredexportmanager</artifactId>                          
 						</ejbModule>
 						<ejbModule>
 							<groupId>de.mpg.escidoc.services</groupId>
@@ -164,16 +162,6 @@
 						<jarModule>
 							<groupId>net.sf.saxon</groupId>
 							<artifactId>saxon-dom</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>trinidad</groupId>
-							<artifactId>trinidad-api</artifactId>
-							<includeInApplicationXml>true</includeInApplicationXml>
-						</jarModule>
-						<jarModule>
-							<groupId>trinidad</groupId>
-							<artifactId>trinidad-impl</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
 						<jarModule>
@@ -533,18 +521,6 @@
 			<artifactId>saxon-dom</artifactId>
 			<version>8.7</version>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>trinidad</groupId>
-			<artifactId>trinidad-api</artifactId>
-			<version>1.2.6</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>trinidad</groupId>
-			<artifactId>trinidad-impl</artifactId>
-			<version>1.2.6</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
