--- a/common_services/sword_presentation/pom.xml
+++ b/common_services/sword_presentation/pom.xml
@@ -30,19 +30,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.63</version>
+		<version>1.0.64-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>sword_presentation</artifactId>
 	<name>sword_presentation</name>
-	<version>1.0.41</version>
+	<version>1.0.42-SNAPSHOT</version>
 	<packaging>war</packaging>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.63/sword_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.63/sword_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.63/sword_presentation</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/sword_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/sword_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
 
 
