--- a/common_services/fledgeddata/pom.xml
+++ b/common_services/fledgeddata/pom.xml
@@ -29,12 +29,12 @@
 	<artifactId>fledgeddata</artifactId>
 	<name>fledged data service</name>
 	<packaging>ejb</packaging>
-	<version>1.0.5-SNAPSHOT</version>
+	<version>1.0.5</version>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/fledgeddata</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/fledgeddata</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/fledgeddata</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/fledgeddata-1.0.5</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/fledgeddata-1.0.5</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/fledgeddata-1.0.5</url>
 	</scm>
 
 	<build>
